<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp"
        android:background="#929395">

        <TextView
            android:id="@+id/mergeSession_TV_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/mergeSession_ET_sessionName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="5dp" 
            android:paddingBottom="5dp">

            <requestFocus />
        </EditText>

    </TableRow>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:background="#929395"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/mergeSession_BT_merge"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/merge" />

        <Button
            android:id="@+id/mergeSession_BT_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

    <ListView
        android:id="@+id/merge_LV_listSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout1" />
    
</RelativeLayout>